--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -24,14 +24,14 @@
               <div class="col-sm-6 col-xs-12">
                 <div class="form-group">
                   <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Endereço</label>
-                  <input type="text" class="form-control" name="address" ngModel id="inputSuccess" placeholder="Endereço">
+                  <input type="text" class="form-control" name="address" required minlength="5" ngModel id="inputSuccess" placeholder="Endereço" autocomplete="false">
                   <span class="help-block"></span>
                 </div>
               </div>
               <div class="col-sm-2 col-xs-6">
                 <div class="form-group has-success">
                   <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Número</label>
-                  <input type="text" class="form-control" name="number" ngModel id="inputSuccess" placeholder="Número">
+                  <input type="text" class="form-control" name="number" required ngModel id="inputSuccess" placeholder="Número" autocomplete="false">
                   <span class="help-block"><i class="fa fa-check"></i> Ok</span>
                 </div>
               </div>
@@ -159,8 +159,8 @@
 
           <div class="row">
             <div class="col-xs-12">
-              <a href="order-summary.html" class="btn btn-success pull-right"><i class="fa fa-credit-card"></i> Concluir Pedido
-              </a>
+              <button class="btn btn-success pull-right" [disabled]="!form.valid"><i class="fa fa-credit-card"></i> Concluir Pedido
+              </button>
             </div>
           </div>
 
