--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -22,24 +22,27 @@
                 <p class="lead">Endereço de Entrega:</p>
               </div>
               <div class="col-sm-6 col-xs-12">
-                <div class="form-group">
+                <div class="form-group" [class.has-success]="iptAddress.valid && (iptAddress.dirty || iptAddress.touched)"
+                                        [class.has-error]="!iptAddress.valid && (iptAddress.dirty || iptAddress.touched)">
                   <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Endereço</label>
-                  <input type="text" class="form-control" name="address" required minlength="5" ngModel id="inputSuccess" placeholder="Endereço" autocomplete="false">
-                  <span class="help-block"></span>
+                  <input type="text" class="form-control" name="address" required minlength="5" #iptAddress="ngModel" ngModel id="inputSuccess" placeholder="Endereço" autocomplete="false">
+                  <span class="help-block" *ngIf="iptAddress.valid && (iptAddress.dirty || iptAddress.touched)"><i class="fa fa-check"> Ok</i></span>
+                  <span class="help-block" *ngIf="!iptAddress.valid && (iptAddress.dirty || iptAddress.touched)"><i class="fa fa-check"> Campo obrigatório</i></span>
                 </div>
               </div>
               <div class="col-sm-2 col-xs-6">
-                <div class="form-group has-success">
+                <div class="form-group" [class.has-success]="iptNumber.valid && (iptNumber.dirty || iptNumber.touched)"
+                                        [class.has-error]="!iptNumber.valid && (iptNumber.dirty || iptNumber.touched)">
                   <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Número</label>
-                  <input type="text" class="form-control" name="number" required ngModel id="inputSuccess" placeholder="Número" autocomplete="false">
-                  <span class="help-block"><i class="fa fa-check"></i> Ok</span>
+                  <input type="text" class="form-control" name="number" required #iptNumber="ngModel" ngModel id="inputSuccess" placeholder="Número" autocomplete="false">
+                  <span class="help-block" *ngIf="iptNumber.valid && (iptNumber.dirty || iptNumber.touched)"><i class="fa fa-check"> Ok</i></span>
+                  <span class="help-block" *ngIf="!iptNumber.valid && (iptNumber.dirty || iptNumber.touched)"><i class="fa fa-check"> Campo obrigatório</i></span>
                 </div>
               </div>
               <div class="col-sm-4 col-xs-6">
-                <div class="form-group has-error">
+                <div class="form-group">
                   <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Complemento</label>
-                  <input type="text" class="form-control" name="optional" ngModel id="inputSuccess" placeholder="Complemento">
-                  <span class="help-block"><i class="fa fa-remove"></i> Help block with error</span>
+                  <input type="text" class="form-control" name="optional" id="inputSuccess" placeholder="Complemento">
                 </div>
 
               </div>
