--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -22,29 +22,19 @@
                 <p class="lead">Endereço de Entrega:</p>
               </div>
               <div class="col-sm-6 col-xs-12">
-                <div class="form-group" [class.has-success]="iptAddress.valid && (iptAddress.dirty || iptAddress.touched)"
-                                        [class.has-error]="!iptAddress.valid && (iptAddress.dirty || iptAddress.touched)">
-                  <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Endereço</label>
-                  <input type="text" class="form-control" name="address" required minlength="5" #iptAddress="ngModel" ngModel id="inputSuccess" placeholder="Endereço" autocomplete="false">
-                  <span class="help-block" *ngIf="iptAddress.valid && (iptAddress.dirty || iptAddress.touched)"><i class="fa fa-check"> Ok</i></span>
-                  <span class="help-block" *ngIf="!iptAddress.valid && (iptAddress.dirty || iptAddress.touched)"><i class="fa fa-check"> Campo obrigatório</i></span>
-                </div>
+                <mt-input-container errorMessage="Campo obrigatório e no mínimo com 5 caracteres" label="Endereço">
+                  <input type="text" class="form-control" name="address" ngModel placeHolder="Endereço" required minlength="5" autocomplete="off">
+                </mt-input-container>
               </div>
               <div class="col-sm-2 col-xs-6">
-                <div class="form-group" [class.has-success]="iptNumber.valid && (iptNumber.dirty || iptNumber.touched)"
-                                        [class.has-error]="!iptNumber.valid && (iptNumber.dirty || iptNumber.touched)">
-                  <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Número</label>
-                  <input type="text" class="form-control" name="number" required #iptNumber="ngModel" ngModel id="inputSuccess" placeholder="Número" autocomplete="false">
-                  <span class="help-block" *ngIf="iptNumber.valid && (iptNumber.dirty || iptNumber.touched)"><i class="fa fa-check"> Ok</i></span>
-                  <span class="help-block" *ngIf="!iptNumber.valid && (iptNumber.dirty || iptNumber.touched)"><i class="fa fa-check"> Campo obrigatório</i></span>
-                </div>
+                <mt-input-container errorMessage="Campo obrigatório" label="Número">
+                  <input type="text" class="form-control" name="number" ngModel placeHolder="Número" required autocomplete="off">
+                </mt-input-container>
               </div>
               <div class="col-sm-4 col-xs-6">
-                <div class="form-group">
-                  <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Complemento</label>
-                  <input type="text" class="form-control" name="optional" id="inputSuccess" placeholder="Complemento">
-                </div>
-
+                <mt-input-container>
+                  <input type="text" class="form-control" name="optional" ngModel placeholder="Complemento">
+                </mt-input-container>
               </div>
               <!-- /.col -->
             </div>
