--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -26,12 +26,12 @@
                   <input type="text" class="form-control" name="address" ngModel placeHolder="Endereço" required minlength="5" autocomplete="off">
                 </mt-input-container>
               </div>
-              <div class="col-sm-2 col-xs-6">
-                <mt-input-container errorMessage="Campo obrigatório" label="Número">
-                  <input type="text" class="form-control" name="number" ngModel placeHolder="Número" required autocomplete="off">
+              <div class="col-sm-3 col-xs-6">
+                <mt-input-container errorMessage="Obrigatório e somente números" label="Número">
+                  <input type="text" class="form-control" name="number" ngModel placeHolder="Número" pattern="^[0-9]*$" required autocomplete="off">
                 </mt-input-container>
               </div>
-              <div class="col-sm-4 col-xs-6">
+              <div class="col-sm-3 col-xs-6">
                 <mt-input-container>
                   <input type="text" class="form-control" name="optional" ngModel placeholder="Complemento">
                 </mt-input-container>
