Após aula 70, com melhorias próprias. Fim da seção 6.

--- a/src/app/order-summary/order-summary.component.html
+++ b/src/app/order-summary/order-summary.component.html
@@ -4,10 +4,19 @@
 
 <section class="content">
   <div class="jumbotron">
-    <h2>Pedido Conluído</h2>
+    <h2>Pedido Concluído</h2>
     <p>Seu pedido foi recebido pelo restaurante. Prepare a mesa que a comida está chegando!</p>
     <p><b>Avalie</b> sua experiência:</p>
-    <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></p>
+    <p>
+      <mt-rating (rated)="showThanks = true"
+                 (passingBy)="showThanks = false"
+                 (leftRated)="showThanks = true"
+                 (leftUnrated)="showThanks = false">
+      </mt-rating>
+    </p>
+    <p [hidden]="!showThanks">
+      Obrigado pela sua avaliação!
+    </p>
   </div>
 
 </section>
